# webscraping-spark-processing

./: README.md  main.py  populacao_paises.csv  pyproject.toml
app/: extract.py  transform.py
populacao_paises_processado.parquet/: .part-00000-431b9d8a-abbf-413b-91dc-9396340f6043-c000.snappy.parquet.crc  part-00000-431b9d8a-abbf-413b-91dc-9396340f6043-c000.snappy.parquet
tests/: test_extract.py
