[tool.poetry]
name = "webscraping-spark-processing"
version = "0.1.0"
description = ""
authors = ["lksprado <lks-prado@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.3"
black = "^25.1.0"
isort = "^6.0.1"
taskipy = "^1.14.1"
pytest = "^8.3.5"
pandera = "^0.23.0"
requests-mock = "^1.12.1"
pyspark = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.taskipy.tasks]
format = """
isort . 
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """ python3 app/main.py """
doc = "mkdocs serve"

